Co-authored-by: Pedrofdez97 <Pedrofdez97@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
     </nav>
-        <div class="row">
+        <div class="row gx-0">
             <div class="col">
                 <div class="carousel slide carousel-fade" id="mi-carousel" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -55,21 +55,21 @@
 								<h5>Placer de conducción</h5>
 								<p>Nuevas sensaciones, tanto en nuestros modelos eléctricos como en los más tradicionales.</p>
 							</div>
-                            <img class="img-fluid w-100" src="imagenes\porsche.jpg" alt="">
+                            <img class="img-fluid" src="imagenes\porsche.jpg" alt="">
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
                             <div class="carousel-caption">
 								<h5>Serenidad</h5>
 								<p>Funciones exclusivas que simplifican la vida diaria.</p>
 							</div>
-                            <img class="img-fluid w-100" src="imagenes\camaro.png" alt="">
+                            <img class="img-fluid " src="imagenes\camaro.png" alt="">
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
                             <div class="carousel-caption">
 								<h5>Presencia en carrretera</h5>
 								<p>Dotados con un diseño que te distinguirá de los demás vehículos.</p>
 							</div>
-                            <img class="img-fluid w-100" src="imagenes\porsche1.jpg" alt="">
+                            <img class="img-fluid" src="imagenes\porsche1.jpg" alt="">
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
                             <div class="carousel-caption">
