--- a/comprar.html
+++ b/comprar.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Document</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -19,7 +19,7 @@
             <a class="navbar-brand" href="./index.html">
                 <img class="" src="imagenes/logo.png" style="width:65px">
             </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
@@ -31,23 +31,22 @@
                         <a class="nav-link dropdown-toggle " href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Nuestros Servicios
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:rgba(20, 20, 20, 0.788)">
+                        <ul class="dropdown-menu justify-content-center" aria-labelledby="navbarDropdownMenuLink" style="background-color:rgba(20, 20, 20, 0.788)">
                         <li><a class="dropdown-item" href="alquilar.html">Alquilar</a></li>
                         <li><a class="dropdown-item" href="comprar.html">Comprar</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"> 
+                    <li class="nav-item">
                         <a class="nav-link" href="Contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a>
                     </li>
                 </ul>
-            </div>             
+            </div>
         </div>
     </nav>
-    <!-- <main class="container-fluid"> -->
-        <div class="row">
+        <div class="row gx-0">
             <div class="col">
                 <div class="carousel slide carousel-fade" id="mi-carousel" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -56,21 +55,21 @@
 								<h5>Placer de conducción</h5>
 								<p>Nuevas sensaciones, tanto en nuestros modelos eléctricos como en los más tradicionales.</p>
 							</div>
-                            <img class="img-fluid w-99" src="imagenes\porsche.jpg" alt="">
+                            <img class="img-fluid" src="imagenes\porsche.jpg" alt="">
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
                             <div class="carousel-caption">
 								<h5>Serenidad</h5>
 								<p>Funciones exclusivas que simplifican la vida diaria.</p>
 							</div>
-                            <img class="img-fluid w-100" src="imagenes\camaro.png" alt="">
+                            <img class="img-fluid " src="imagenes\camaro.png" alt="">
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
                             <div class="carousel-caption">
 								<h5>Presencia en carrretera</h5>
 								<p>Dotados con un diseño que te distinguirá de los demás vehículos.</p>
 							</div>
-                            <img class="img-fluid w-100" src="imagenes\porsche1.jpg" alt="">
+                            <img class="img-fluid" src="imagenes\porsche1.jpg" alt="">
                         </div>
                         <div class="carousel-item" data-bs-interval="5000">
                             <div class="carousel-caption">
@@ -81,7 +80,7 @@
                         </div>
                     </div>
                     <!-- CONTROLES -->
-                    <button 
+                    <button
                     class="carousel-control-prev"
                     type="button"
                     data-bs-target="#mi-carousel"
@@ -91,7 +90,7 @@
                     <span class="visually-hidden">Anterior</span>
                 </button>
 
-                <button 
+                <button
                     class="carousel-control-next"
                     type="button"
                     data-bs-target="#mi-carousel"
@@ -102,28 +101,28 @@
                 </button>
                     <!-- INDICADORES -->
 					<div class="carousel-indicators">
-						<button 
+						<button
 							type="button"
 							class="active"
 							data-bs-target="#mi-carousel"
 							data-bs-slide-to="0"
 							aria-label="Slide 1"
 						></button>
-						<button 
+						<button
 							type="button"
 							class=""
 							data-bs-target="#mi-carousel"
 							data-bs-slide-to="1"
 							aria-label="Slide 2"
 						></button>
-						<button 
+						<button
 							type="button"
 							class=""
 							data-bs-target="#mi-carousel"
 							data-bs-slide-to="2"
 							aria-label="Slide 3"
 						></button>
-                        <button 
+                        <button
 							type="button"
 							class=""
 							data-bs-target="#mi-carousel"
@@ -134,8 +133,8 @@
                 </div>
             </div>
         </div>
-        
-    </div>
+
+    </nav>
 </div>
     <!-- </main> -->
     <!-- </Footer> -->
@@ -150,6 +149,6 @@
         <p class="text-center text-white">© 2021 Company, Inc</p>
       </footer>
 
-      
+
 </body>
 </html>
