Co-authored-by: Pedrofdez97 <Pedrofdez97@users.noreply.github.com> Co-authored-by: Miguel Ángel <MGarridoGav@users.noreply.github.com>

--- a/alquilar.html
+++ b/alquilar.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Alquiler</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid ">
             <a class="navbar-brand" href="./index.html">
-                <img class="" src="imagenes/logo.png" style="width:65px">
+                <img class="" src="imagenes/coche.png" style="width:65px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,100 +42,115 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a>
                     </li>
+                    <li>
+                        <a class="nav-item" href="./formbuy.html">
+                            <img class="" src="imagenes/cesta.png" style="width:32px">
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-        <div class="row gx-0">
-            <div class="col">
-                <div class="carousel slide carousel-fade" id="mi-carousel" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active" data-bs-interval="5000">
-                            <div class="carousel-caption">
-								<h5>Placer de conducción</h5>
-								<p>Nuevas sensaciones, tanto en nuestros modelos eléctricos como en los más tradicionales.</p>
-							</div>
-                            <img class="img-fluid" src="imagenes\porsche.jpg" alt="">
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <div class="carousel-caption">
-								<h5>Serenidad</h5>
-								<p>Funciones exclusivas que simplifican la vida diaria.</p>
-							</div>
-                            <img class="img-fluid " src="imagenes\camaro.png" alt="">
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <div class="carousel-caption">
-								<h5>Presencia en carrretera</h5>
-								<p>Dotados con un diseño que te distinguirá de los demás vehículos.</p>
-							</div>
-                            <img class="img-fluid" src="imagenes\porsche1.jpg" alt="">
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <div class="carousel-caption">
-								<h5>Mejor precio garantizado</h5>
-								<p>Comprometidos a ofrecerte precios únicos por cada uno de los modelos.</p>
-							</div>
-                            <img class="img-fluid w-100" src="imagenes\r8.jpg" alt="">
-                        </div>
-                    </div>
-                    <!-- CONTROLES -->
-                    <button
-                    class="carousel-control-prev"
-                    type="button"
-                    data-bs-target="#mi-carousel"
-                    data-bs-slide="prev"
-                >
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Anterior</span>
-                </button>
-
-                <button
-                    class="carousel-control-next"
-                    type="button"
-                    data-bs-target="#mi-carousel"
-                    data-bs-slide="next"
-                >
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Siguiente</span>
-                </button>
-                    <!-- INDICADORES -->
-					<div class="carousel-indicators">
-						<button
-							type="button"
-							class="active"
-							data-bs-target="#mi-carousel"
-							data-bs-slide-to="0"
-							aria-label="Slide 1"
-						></button>
-						<button
-							type="button"
-							class=""
-							data-bs-target="#mi-carousel"
-							data-bs-slide-to="1"
-							aria-label="Slide 2"
-						></button>
-						<button
-							type="button"
-							class=""
-							data-bs-target="#mi-carousel"
-							data-bs-slide-to="2"
-							aria-label="Slide 3"
-						></button>
-                        <button
-							type="button"
-							class=""
-							data-bs-target="#mi-carousel"
-							data-bs-slide-to="3"
-							aria-label="Slide 4"
-						></button>
-					</div>
+    <div class="fondo bg-light">
+    <div class="container">
+      <br>
+          <br>
+            <p class="fs-1 text-center fw-bolder" style="font-family:poppins">Vehículos para alquilar</p>
+    <div class="row featurette">
+        <div class="col-md-7 mb-5 mt-1">
+          <h2 class="featurette-heading">BMW</h2>
+            <p class="fs-5 fst-italic">El BMW i4 eléctrico, diseñado como 
+                una berlina de cinco puertas, es el primer coche eléctrico de 
+                BMW que atenta a un nicho de mercado cuyo de volumen de ventas 
+                goza de una cuota significativa, pues modelos como el iX o el 
+                anterior i3 atienden a conceptos que divagan entre varios segmentos. 
+                Este del enfoque del i4 como producto ya ha tenido repercusión en la 
+                organización de BMW, quienes en primera instancia parecen no haber calculado 
+                bien el alcance de su berlina eléctrica, pues el i4 está teniendo una demanda mayor de la esperada.
+                </p>
+                <a class="btn btn-outline-dark" href="formbuy.html" role="button">Alquilar</a>
+        </div>
+          <div class="col-md-5 mt-2">
+                <img src="imagenes/bmw.jpg" width="500" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveaspectratio="xMidYMid slice" focusable="false" class="img-fluid">
+        </div>
+        <hr>
+      </div>
+      <div class="row featurette">
+        <div class="col-md-7 order-md-2 mb-5 mt-5">
+          <h2 class="featurette-heading">Mercedes</h2>
+            <p class="fs-5 fst-italic">Mercedes ha vuelto a sorprender en el mercado de las berlinas con un nuevo Mercedes CLA, 
+                un nuevo modelo que cuenta con cuatro puertas y que cuenta con distintos elementos muy similares a sus hermanos
+                de marca. La marca alemana ha buscado juntar las mejores características para ofrecer a los usuarios de uno de 
+                los mejores vehículos de su gama, cuyo mercado es uno de los más competitivos, con dos versiones de este vehículo:
+                El CLA Coupé y el CLA Shooting Brake. La gama CLA, concretamente, tiene muchas opciones a la hora de elegir con qué
+                 tipo de motor puede contar: Entre los motores de gasolina, cuenta con varios modelos distintos cuya característica 
+                 principal son sus cuatro cilindros en línea. </p>
+                  <a class="btn btn-outline-dark" href="formbuy.html" role="button">Alquilar</a>
+        </div>
+        <div class="col-md-5 order-md-1 mb-5 mt-5">
+                <img src="imagenes/mercedes.jpg" width="500" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveaspectratio="xMidYMid slice" focusable="false" class="img-fluid">
+        </div>
+        </div>
+        <hr>
+            <div class="row featurette">
+                <div class="col-md-7 mb-5 mt-5">
+                  <h2 class="featurette-heading">Audi</h2>
+                    <p class="fs-5 fst-italic">En el año 2016 se puso a la venta la quinta generación de Audi A4,
+                         una berlina que comparte plataforma con otros modelos del grupo Volkswagen pero que es capaz 
+                         de mantener su propia esencia. De hecho, otras grandes berlinas y sus variantes coupés que 
+                         llegaron después tienen gran influencia por parte de este coche.
+                         Las dimensiones del Audi A4 son las siguientes: su longitud crece hasta los 4,72 metros, 
+                         tiene una anchura de 1,84 metros y su altura se queda en 1,42 metros. Así mismo, estas son
+                          las medidas del Audi A4 Avant, la variante A4 familiar: cuenta con una longitud de 4,72 metros 
+                          de longitud, 1,84 metros de ancho y 1,43 metros de alto.
+                    </p>
+                        <a class="btn btn-outline-dark" href="formbuy.html" role="button">Alquilar</a>
                 </div>
+                  <div class="col-md-5 mb-5 mt-5">
+                        <img src="imagenes/audi.jpg" width="500" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveaspectratio="xMidYMid slice" focusable="false" class="img-fluid">
+                </div>
+                <hr>
+              </div>
+              <div class="row featurette">
+                <div class="col-md-7 order-md-2 mb-5 mt-5">
+                  <h2 class="featurette-heading">Bugatti</h2>
+                    <p class="fs-5 fst-italic">El Bugatti Chiron es el sucesor del Bugatti Veyron, un superdeportivo 
+                        que supuso el regreso de este fabricante francés de coches de lujo bajo el mando de Volkswagen.
+                         Al igual que su antecesor, el Bugatti Chiron es un coche que ha sido diseñado para estar en el 
+                         'top' de los mejores deportivos del mundo. El Bugatti tiene que compartir su reinado con productos
+                          como el Koenigsegg Regera o el Pagani Huayra. Los datos técnicos del nuevo Bugatti Chiron son brutales:
+                           utiliza un motor W16 de 8.0 litros que es fruto de la unión de dos bloques V8 del grupo Volkswagen. 
+                           Este propulsor recurre a la sobrealimentación, en concreto, a cuatro turbocompresores. El W16 del 
+                           Chiron ofrece a su conductor 1.500CV de potencia a 6.700 revoluciones por minuto.</p>
+                           <a class="btn btn-outline-dark" href="formbuy.html" role="button">Alquilar</a>
+                </div>
+                <div class="col-md-5 order-md-1 mb-5 mt-5">
+                        <img src="imagenes/buggati.jpg" width="500" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveaspectratio="xMidYMid slice" focusable="false" class="img-fluid">
+                </div>
+                </div>
+                <hr>
+                <div class="row featurette">
+                    <div class="col-md-7 mb-5 mt-5">
+                      <h2 class="featurette-heading">Ford Mustang</h2>
+                        <p class="fs-5 fst-italic">Uno de los coches nuevos más famosos y con más personalidad del fabricante 
+                            norteamericano es el Ford Mustang. Nacido en 1964 en los Estados Unidos, ha aparecido en tantas 
+                            películas, series y videojuegos que el logo de este modelo es como una marca aparte dentro del 
+                            organigrama del fabricante americano Ford. Conoce todas las generaciones del Ford Mustang en este
+                             video.
+                            Y casi 50 años ha tardado el emblema del 'caballo salvaje' en llegar a Europa, manteniendo la esencia
+                             del modelo antiguo pero actualizado a las nuevas exigencias del mercado europeo. En TopGear ya lo
+                              hemos puesto a prueba; aquí tienes nuestra prueba del Ford Mustang 2018.
+                            Ford ha comercializado casi 30.000 unidades del Mustang desde que este icónico deportivo se pusiera
+                             a la venta por primera vez en Europa en 2015.
+                        </p>
+                            <a class="btn btn-outline-dark" href="formbuy.html" role="button">Alquilar</a>
+                    </div>
+                      <div class="col-md-5 mb-5 mt-5">
+                            <img src="imagenes/ford mustang.jpg" width="500" height="300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveaspectratio="xMidYMid slice" focusable="false" class="img-fluid">
+                    </div>
+                  </div>
             </div>
         </div>
-
-    </nav>
-</div>
     <!-- </main> -->
     <!-- </Footer> -->
     <footer class="py-5 bg-dark">
