--- a/Contacto.html
+++ b/Contacto.html
@@ -6,18 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Contacto</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <style type="text/css">
+        .form-group{
+            padding: 7px;
+        }
+    </style>
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid ">
             <a class="navbar-brand" href="./index.html">
-                <img class="" src="imagenes/logo.png" style="width:65px">
+                <img class="" src="imagenes/coche.png" style="width:65px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,101 +47,89 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sobrenosotros.html">Sobre Nosotros</a>
                     </li>
+                    <li>
+                        <a class="nav-item" href="./formbuy.html">
+                            <img class="" src="imagenes/cesta.png" style="width:32px">
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-        <div class="row gx-0">
-            <div class="col">
-                <div class="carousel slide carousel-fade" id="mi-carousel" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active" data-bs-interval="5000">
-                            <div class="carousel-caption">
-								<h5>Placer de conducción</h5>
-								<p>Nuevas sensaciones, tanto en nuestros modelos eléctricos como en los más tradicionales.</p>
-							</div>
-                            <img class="img-fluid" src="imagenes\porsche.jpg" alt="">
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <div class="carousel-caption">
-								<h5>Serenidad</h5>
-								<p>Funciones exclusivas que simplifican la vida diaria.</p>
-							</div>
-                            <img class="img-fluid " src="imagenes\camaro.png" alt="">
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <div class="carousel-caption">
-								<h5>Presencia en carrretera</h5>
-								<p>Dotados con un diseño que te distinguirá de los demás vehículos.</p>
-							</div>
-                            <img class="img-fluid" src="imagenes\porsche1.jpg" alt="">
-                        </div>
-                        <div class="carousel-item" data-bs-interval="5000">
-                            <div class="carousel-caption">
-								<h5>Mejor precio garantizado</h5>
-								<p>Comprometidos a ofrecerte precios únicos por cada uno de los modelos.</p>
-							</div>
-                            <img class="img-fluid w-100" src="imagenes\r8.jpg" alt="">
-                        </div>
-                    </div>
-                    <!-- CONTROLES -->
-                    <button
-                    class="carousel-control-prev"
-                    type="button"
-                    data-bs-target="#mi-carousel"
-                    data-bs-slide="prev"
-                >
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Anterior</span>
-                </button>
+        
+<div class="container-fluid bg-light">
+    <h1 class="d-flex justify-content-center" style="padding-top: 20px;">Contacta con nosotros</h1>
+    <p class="d-flex justify-content-center text-center"  style="margin-bottom:20px;">Puedes rellenar nuestro formulario online para enviar un mensaje a nuestro equipo de atención al cliente.
+        Trataremos de responder a tu mensaje en un plazo de 2 días laborables.</p>
 
-                <button
-                    class="carousel-control-next"
-                    type="button"
-                    data-bs-target="#mi-carousel"
-                    data-bs-slide="next"
-                >
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Siguiente</span>
-                </button>
-                    <!-- INDICADORES -->
-					<div class="carousel-indicators">
-						<button
-							type="button"
-							class="active"
-							data-bs-target="#mi-carousel"
-							data-bs-slide-to="0"
-							aria-label="Slide 1"
-						></button>
-						<button
-							type="button"
-							class=""
-							data-bs-target="#mi-carousel"
-							data-bs-slide-to="1"
-							aria-label="Slide 2"
-						></button>
-						<button
-							type="button"
-							class=""
-							data-bs-target="#mi-carousel"
-							data-bs-slide-to="2"
-							aria-label="Slide 3"
-						></button>
-                        <button
-							type="button"
-							class=""
-							data-bs-target="#mi-carousel"
-							data-bs-slide-to="3"
-							aria-label="Slide 4"
-						></button>
-					</div>
+    <div class="container">
+        <form class="form-horizontal" method="post">
+            <fieldset class="justify-content-center">
+            <div class="row">
+                <div class="col form-group">
+                    <span class="text-center"><i class="fa fa-user"></i></span>
+                    <div>
+                        <label class="form-label" for="correo">Nombre:</label>
+                        <input id="fname" name="name" type="text" placeholder="" class="form-control">
+                    </div>
+                </div>
+                <div class="col form-group">
+                    <span class="text-center"><i class="fa fa-user"></i></span>
+                    <div>
+                        <label class="form-label" for="correo">Apellidos:</label>
+                        <input id="lname" name="name" type="text" placeholder="" class="form-control">
+                    </div>
                 </div>
             </div>
-        </div>
 
-    </nav>
+            <div class="row">
+                <div class="col form-group mt-3">
+                    <span class="text-center"><i class="fa fa-phone-square"></i></span>
+                    <div>
+                        <label class="form-label" for="correo">Número de teléfono:</label>
+                        <input id="phone" name="phone" type="text" placeholder="624123456" class="form-control">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col form-group mt-3">
+                    <span class="text-center"><i class="fa fa-envelope-o"></i></span>
+                    <div>
+                        <label class="form-label" for="correo">Correo electrónico:</label>
+                        <input id="email" name="email" type="text" placeholder="alguien@example.com" class="form-control">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col form-group mt-3">
+                    <label class="form-label" for="correo">Tipo de consulta:</label>
+                    <select class="form-select" aria-label="Default select example">
+                        <option selected>Seleccione una opción</option>
+                        <option value="1">Pedidos</option>
+                        <option value="2">Entrega, devoluciones y reembolsos</option>
+                        <option value="3">Mi cuenta</option>
+                        <option value="3">Otras consultas</option>
+                      </select>
+            </div>
+            <div class="row">
+                <div class="col form-group mt-3">
+                    <span class="text-center"><i class="fa fa-pencil-square-o"></i></span>
+                    <div>
+                        <textarea class="form-control" id="message" name="message" placeholder="Introduce aquí tu mensaje. Te contestaremos en un plazo de dos días laborales" rows="7"></textarea>
+                    </div>
+                </div>
+            </div>
+                <div class="form-group mt-3" style="margin-bottom:60px;">
+                    <div class="text-center">
+                        <a class="btn btn-dark" href="#" role="button">Enviar</a>
+                    </div>
+                </div>
+            </fieldset>
+        </form>
+    </div>
 </div>
-    <!-- </main> -->
+
     <!-- </Footer> -->
     <footer class="py-5 bg-dark">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
