--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-                <a class="col title">Luxury Car Spain</a>
+                <a class="col title" style="color: #b8bcc7;">Luxury Car Spain</a>
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
